force-app/main/default/objects/WhatsApp_Settings__c/fields/API_Instance__c.field-meta.xml
<CustomField>
    <fullName>API_Instance__c</fullName>
    <label>API Instance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>