force-app/main/default/objects/WhatsApp_Settings__c/fields/End_Point_Url__c.field-meta.xml
<CustomField>
    <fullName>End_Point_Url__c</fullName>
    <label>End Point Url</label>
    <type>Url</type>
</CustomField>